<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="litianly.myMiniResume.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_medium">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/name_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/user_pic"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/edit_basic_info"
                    android:textSize="@dimen/caption_text_size"
                    tools:text="Gallen Yao" />

                <ImageButton
                    android:id="@+id/edit_basic_info"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:src = "@drawable/ic_mode_edit_black_18dp"
                    android:background="?attr/selectableItemBackground"
                    android:layout_marginLeft="12dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/name_layout"
                android:layout_toLeftOf="@+id/user_pic"
                tools:text="yltlgallen17@gmail.com"/>


            <ImageView
                android:id="@+id/user_pic"
                android:layout_width="@dimen/user_picture_size"
                android:layout_height="@dimen/user_picture_size"
                android:layout_alignParentRight="true"
                android:src="@drawable/user_ghost" />
        </RelativeLayout>



        <LinearLayout
            android:id="@+id/education"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/section_education"
                android:textAllCaps="true"
                android:textSize="@dimen/caption_text_size"/>

            <ImageButton
                android:id="@+id/add_education_btn"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/ic_add_black_18dp"
                android:background="?attr/selectableItemBackground"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/educations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:id="@+id/experience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/section_experience"
                android:textAllCaps="true"
                android:textSize="@dimen/caption_text_size"/>

            <ImageButton
                android:id="@+id/add_experience_btn"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/ic_add_black_18dp"
                android:background="?attr/selectableItemBackground"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/experiences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:id="@+id/project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/section_projects"
                android:textAllCaps="true"
                android:textSize="@dimen/caption_text_size"/>

            <ImageButton
                android:id="@+id/add_project_btn"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/ic_add_black_18dp"
                android:background="?attr/selectableItemBackground"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/projects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"></LinearLayout>


    </LinearLayout>


</ScrollView>
